--- a/content/img/request-processing.tex
+++ b/content/img/request-processing.tex
@@ -1,6 +1,8 @@
 \documentclass{article}
 \usepackage[utf8]{inputenc}
 
+
+
 % Page setup
 \usepackage[a4paper,margin=2cm,paperwidth=35cm,paperheight=15cm]{geometry}
 \usepackage{amsmath}
@@ -10,6 +12,8 @@
 \let\familydefault\sfdefault
 
 \usepackage[usenames,svgnames]{xcolor}
+
+
 \usepackage{tikz,pgfplots}
 \usetikzlibrary{positioning,arrows,intersections,fit,calc}
 \usetikzlibrary{arrows,shapes,positioning,shadows,trees,backgrounds,calc,patterns,decorations.markings,cd}
@@ -62,8 +66,25 @@
 \definecolor{colorrepeat}   {RGB}{255,240,240}
 \definecolor{colorwhite}    {RGB}{255,255,255}
 
+
+\usepackage{listings}
+\lstset{%
+  frame            = tb,    % draw frame at top and bottom of code block
+  tabsize          = 1,     % tab space width
+  numbers          = left,  % display line numbers on the left
+  framesep         = 3pt,   % expand outward
+  framerule        = 0.4pt, % expand outward
+  commentstyle     = \color{Green},      % comment color
+  keywordstyle     = \color{blue},       % keyword color
+  stringstyle      = \color{DarkRed},    % string color
+  backgroundcolor  = \color{WhiteSmoke}, % backgroundcolor color
+  showstringspaces = false,              % do not mark spaces in strings
+}
+
+
 \begin{document}
 \pagestyle{empty}
+
 
 \begin{tikzpicture}[
     node distance = 20em, auto, thick,transform canvas={scale=1},
@@ -94,7 +115,7 @@
   \node[draw,fill=colorpod,rectangle,below of = client, minimum height=20em, minimum width=25em] (POD) {};
   \node[below right, text depth=20mm,text height=5mm,,title,text width=10em] at (POD.north west){} ++(1.75,-0.75) node[title,text width=10em] {Pod Alice};
   \node[draw,dashed,fill=colorrepeat,fill opacity=0.5, text opacity=1,below=4em of POD.north, minimum height=2cm, minimum width=20em] (ACP) {};
-  \node[below right=0.5em and 0em, text depth=20mm,text height=3mm,title,text width=15em] at (ACP.north west){Access Control Policy};
+  \node[below right=0.5em and 0em, text depth=20mm,text height=3mm,title,text width=20em] at (ACP.north west){Access Control Policies $P$};
 
   \node[draw,fill=colorfile,fill opacity=0.5, text opacity=1,below left=3em and -9em of ACP, minimum height=5em, minimum width=9em] (f1) {};
   \node[below right, text depth=20mm,text height=5mm,title,text width=10em] at (f1.north west){File 1};
@@ -102,11 +123,12 @@
   \node[below right, text depth=20mm,text height=5mm,title,text width=9em] at (f2.north west){File 2};
 
 
-  \draw[->,thick, dashed] (client) -- node[pos=0.4,above, xshift=-20] {Request} (ACP.north);
+  \draw[->,thick, dashed] (client) -- node[pos=0.4,above, xshift=-20, align=center] {request \\ $(i,a,q)$} (ACP.north);
   \draw[->,thick,colorclient] (ACP.south) -- node[ fill=colorpod, anchor=center, pos=0.5,font={\Large\bfseries\itshape}] {$\times$} (f1.north);
   \draw[->,thick] (ACP.south) -- node[pos=0.7,above,font={\Large\bfseries\itshape}] {$\checkmark$} (f2.north);
 
-  \draw[->,thick] (f2.east) -- +(1.5,0) -| +(1.5,0) |- node[pos=0.8,above] {Response} (client.east);
+  \draw[->,thick] (f2.east) -- +(1.5,0) -| +(1.5,0) |- node[pos=0.8,above] {Results} (client.east);
+
 
   % Arrows between executor and files
   % \draw[<->,thick,dashed] (2,0.5) -- node[left]{execute $q$} (1,-4);
