--- a/content/references.bib
+++ b/content/references.bib
@@ -455,4 +455,21 @@ pages={69-82},
   url={http://www.semantic-web-journal.net/system/files/swj1280.pdf}
 }
 
+@inproceedings{hibiscus,
+  title={Hibiscus: Hypergraph-based source selection for sparql endpoint federation},
+  author={Saleem, Muhammad and Ngomo, Axel-Cyrille Ngonga},
+  booktitle={European semantic web conference},
+  pages={176--191},
+  year={2014},
+  organization={Springer}
+}
+
+@inproceedings{splendid,
+  title={Splendid: Sparql endpoint federation exploiting void descriptions},
+  author={G{\"o}rlitz, Olaf and Staab, Steffen},
+  booktitle={Proceedings of the Second International Conference on Consuming Linked Data-Volume 782},
+  pages={13--24},
+  year={2011},
+  organization={CEUR-WS. org}
+}
 
