--- a/content/references.bib
+++ b/content/references.bib
@@ -473,3 +473,13 @@ pages={69-82},
   organization={CEUR-WS. org}
 }
 
+@article{rdf3x,
+  title = {RDF-3X: a RISC-style engine for RDF},
+  author = {Neumann, Thomas and Weikum, Gerhard},
+  journal = {Proceedings of the VLDB Endowment},
+  volume = {1},
+  number = {1},
+  pages = {647--659},
+  year = {2008},
+  publisher = {VLDB Endowment}
+}
