--- a/content/img/use-case.tex
+++ b/content/img/use-case.tex
@@ -34,7 +34,7 @@
     % Person Alice
     \draw[fill=colorperson] (2,4) circle (30pt);
     \node[person] at (2,4) (alice) {Alice};
-    
+
     % Person Dave
     \draw[fill=colorperson] (17,4) circle (30pt);
     \node[person] at (17,4) (dave) {Dave};
@@ -52,12 +52,12 @@
     \ \ $<$https://bob.pods.org/profile\#me$>$,\\
     \ \ $<$https://carol.org/\#i$>$,\\
     \ldots};
-    
+
     % Pod Bob
     \draw[fill=colorpod] (0,-6.5) rectangle (8,-1.5);
     \node[title,text width=10em] at (2,-2) {Pod Bob};
     \node[code,text width=10em] at (6,-2) {https://bob.pods.org/};
-    
+
     % Profile Bob
     \draw[fill=colorprofile] (0.5,-6) rectangle (7.5,-3);
     \node[title,text width=10em] at (2.5,-3.5) {Profile};
@@ -65,16 +65,16 @@
     \node[code,text width=20em] at (4.3,-5) {$<$/profile\#me$>$ :name "Bob".\\
     $<$/profile\#me$>$ :email $<$bob@mail.org$>$.\\
     $<$/profile\#me$>$ :telephone "0499 12 34 56".};
-    \node[key] at (0.75,-4.55) {R1$_B$};
-    \node[key] at (0.75,-4.98) {R1$_B$};
-    \node[key] at (0.75,-5.42) {R3$_B$};
-    \node[key] at (4,-6.25) {Alice $\in$ R1$_B$, R2$_B$, R3$_B$; Dave $\in$ R1$_B$};
-    
+    \node[key] at (0.75,-4.55) {S$_E$};
+    \node[key] at (0.75,-4.98) {S$_E$};
+    \node[key] at (0.75,-5.42) {S$_F$};
+    %\node[key] at (4,-6.25) {Alice $\in$ S$_F$; Dave $\in$ S$_E$};
+
     % Pod Carol
     \draw[fill=colorpod] (11,-6.5) rectangle (19,-1.5);
     \node[title,text width=10em] at (13,-2) {Pod Carol};
     \node[code,text width=10em] at (17.7,-2) {https://carol.org/};
-    
+
     % Profile Carol
     \draw[fill=colorprofile] (11.5,-6) rectangle (18.5,-3);
     \node[title,text width=10em] at (13.5,-3.5) {Profile};
@@ -82,15 +82,15 @@
     \node[code,text width=20em] at (15.3,-5) {$<$/\#i$>$ :name "Carol".\\
     $<$/\#i$>$ :email $<$i@carol.org$>$.\\
     $<$/\#i$>$ :telephone "0499 11 22 33".};
-    \node[key] at (11.75,-4.55) {R1$_C$};
-    \node[key] at (11.75,-4.98) {R2$_C$};
-    \node[key] at (11.75,-5.42) {R3$_C$};
-    \node[key] at (15,-6.25) {Alice $\in$ R1$_C$, R2$_C$; Dave $\in$ R1$_C$};
+    \node[key] at (11.75,-4.55) {S$_E$};
+    \node[key] at (11.75,-4.98) {S$_A$};
+    \node[key] at (11.75,-5.42) {S$_F$};
+   % \node[key] at (15,-6.25) {Alice $\in$ S$_A$; Dave $\in$ S$_E$};
 
     % Arrows between pods
     \draw[->,thick,dashed](6.6,2.2) to [out=180,in=90] (4,-3);
     \draw[->,thick,dashed](10,1.75) to [out=0,in=90] (15,-3);
-    
+
     % Arrows from people to data
     \draw[->,thick,colorperson] (alice) -- (6,3.5);
     \draw[->,thick,colorperson] (alice) -- (3.5,-3);
