changed color of profiles in uc figure

--- a/content/img/use-case.tex
+++ b/content/img/use-case.tex
@@ -59,7 +59,7 @@
     \node[code,text width=10em] at (6,-2) {https://bob.pods.org/};
 
     % Profile Bob
-    \draw[fill=colorprofile] (0.5,-6) rectangle (7.5,-3);
+    \draw[fill=colorbook] (0.5,-6) rectangle (7.5,-3);
     \node[title,text width=10em] at (2.5,-3.5) {Profile};
     \node[code,text width=10em] at (7.5,-3.5) {/profile};
     \node[code,text width=20em] at (4.3,-5) {$<$/profile\#me$>$ :name "Bob".\\
@@ -76,7 +76,7 @@
     \node[code,text width=10em] at (17.7,-2) {https://carol.org/};
 
     % Profile Carol
-    \draw[fill=colorprofile] (11.5,-6) rectangle (18.5,-3);
+    \draw[fill=colorbook] (11.5,-6) rectangle (18.5,-3);
     \node[title,text width=10em] at (13.5,-3.5) {Profile};
     \node[code,text width=10em] at (19,-3.5) {/};
     \node[code,text width=20em] at (15.3,-5) {$<$/\#i$>$ :name "Carol".\\
