removed sidenotes; updated uc figure

--- a/content/img/use-case.tex
+++ b/content/img/use-case.tex
@@ -28,7 +28,7 @@
     title/.style={text=colortext,font={\Large\itshape}},
     person/.style={text=colorwhite,font={\Large\bfseries}},
     code/.style={text=colortext,font={}},
-    key/.style={text=colorkey,font={\tiny\itshape}}
+    key/.style={text=colortext,font={\small\itshape}}
 ]
 
     % Person Alice
@@ -65,9 +65,9 @@
     \node[code,text width=20em] at (4.3,-5) {$<$/profile\#me$>$ :name "Bob".\\
     $<$/profile\#me$>$ :email $<$bob@mail.org$>$.\\
     $<$/profile\#me$>$ :telephone "0499 12 34 56".};
-    \node[key] at (0.75,-4.55) {S$_E$};
-    \node[key] at (0.75,-4.98) {S$_E$};
-    \node[key] at (0.75,-5.42) {S$_F$};
+    \node[key] at (0.25,-4.55) {r$_1$};
+    \node[key] at (0.25,-4.98) {r$_1$};
+    \node[key] at (0.25,-5.42) {r$_2$};
     %\node[key] at (4,-6.25) {Alice $\in$ S$_F$; Dave $\in$ S$_E$};
 
     % Pod Carol
@@ -82,9 +82,9 @@
     \node[code,text width=20em] at (15.3,-5) {$<$/\#i$>$ :name "Carol".\\
     $<$/\#i$>$ :email $<$i@carol.org$>$.\\
     $<$/\#i$>$ :telephone "0499 11 22 33".};
-    \node[key] at (11.75,-4.55) {S$_E$};
-    \node[key] at (11.75,-4.98) {S$_A$};
-    \node[key] at (11.75,-5.42) {S$_F$};
+    \node[key] at (11.25,-4.55) {r$_3$};
+    \node[key] at (11.25,-4.98) {r$_4$};
+    \node[key] at (11.25,-5.42) {r$_5$};
    % \node[key] at (15,-6.25) {Alice $\in$ S$_A$; Dave $\in$ S$_E$};
 
     % Arrows between pods
