Polish all sections and add TODOs

--- a/content/img/summary-components-privacy.tex
+++ b/content/img/summary-components-privacy.tex
@@ -44,7 +44,7 @@
     \draw [decorate,decoration={brace,amplitude=15pt}] (2.3,3.8) -- (5.5,3.8) node [code,midway,yshift=13pt] {u};
     %\draw [decorate,decoration={brace,amplitude=15pt}] (0.5,1) -- (0.5,3) node [code,midway,xshift=-13pt] {Q}; % Q on left-hand side
     \draw [decorate,decoration={brace,amplitude=15pt,mirror}] (0.5,1) -- (2.8,1) node [code,midway,yshift=-30pt] {Q};
-    \draw [decorate,decoration={brace,amplitude=15pt,mirror}] (2.9,1) -- (5.3,1) node [code,midway,yshift=-30pt] {qk};
+    \draw [decorate,decoration={brace,amplitude=15pt,mirror}] (2.9,1) -- (5.3,1) node [code,midway,yshift=-30pt] {QPK};
     
     % Summary
     \draw[fill=colorsummary] (11,4) rectangle (20,-0.5);
