added small summary rect underneath pod files of fig7

--- a/content/img/query-execution.tex
+++ b/content/img/query-execution.tex
@@ -75,27 +75,33 @@
     \draw[<-,thick] (3,1) -- node[above]{selected sources} (9,1);
 
     % Pod Alice
-    \draw[fill=colorpod] (-1.5,-6) rectangle (6,-2.5);
+    \draw[fill=colorpod] (-1.5,-7) rectangle (6,-2.5);
     \node[title,text width=10em] at (0.5,-3) {Pod Alice};
     \draw[fill=colorfile] (-1,-5.5) rectangle (2,-4);
+    \draw[fill=colorsummary] (-1,-5.8) rectangle (2,-5.3);
     \node[title,text width=10em] at (0.9,-4.5) {File 1};
     \draw[fill=colorfile] (2.5,-5.5) rectangle (5.5,-4);
+    \draw[fill=colorsummary] (2.5,-5.8) rectangle (5.5,-5.3);
     \node[title,text width=10em] at (4.4,-4.5) {File 2};
 
     % Pod Bob
-    \draw[fill=colorpod] (6.5,-6) rectangle (14,-2.5);
+    \draw[fill=colorpod] (6.5,-7) rectangle (14,-2.5);
     \node[title,text width=10em] at (8.5,-3) {Pod Bob};
     \draw[fill=colorfile] (7,-5.5) rectangle (10,-4);
+    \draw[fill=colorsummary] (7,-5.8) rectangle (10,-5.3);
     \node[title,text width=10em] at (8.9,-4.5) {File 1};
     \draw[fill=colorfile] (10.5,-5.5) rectangle (13.5,-4);
+    \draw[fill=colorsummary] (10.5,-5.8) rectangle (13.5,-5.3);
     \node[title,text width=10em] at (12.4,-4.5) {File 2};
 
     % Pod Carol
-    \draw[fill=colorpod] (14.5,-6) rectangle (22,-2.5);
+    \draw[fill=colorpod] (14.5,-7) rectangle (22,-2.5);
     \node[title,text width=10em] at (16.5,-3) {Pod Carol};
     \draw[fill=colorfile] (15,-5.5) rectangle (18,-4);
+    \draw[fill=colorsummary] (15,-5.8) rectangle (18,-5.3);
     \node[title,text width=10em] at (16.9,-4.5) {File 1};
     \draw[fill=colorfile] (18.5,-5.5) rectangle (21.5,-4);
+    \draw[fill=colorsummary] (18.5,-5.8) rectangle (21.5,-5.3);
     \node[title,text width=10em] at (20.4,-4.5) {File 2};
 
     % Arrows between executor and files
